--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -1,1 +1,82 @@
-div {font-family: sans-serif;}
+* * {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+/* header and logo  */
+
+header {
+    width: 100vw
+}
+
+#logo-container {
+    margin: 0 auto;
+    width: 325px;
+    background-color: red;
+    text-transform: uppercase;
+}
+
+#logo-r {
+    font-family: 'Russo One', sans-serif;
+    font-weight: 700;
+    position: relative;
+    z-index: 3;
+}
+
+#logo-o {
+    font-family: 'Comforter', cursive;
+    font-weight: 500;
+    position: relative;
+    z-index: 2;
+    color: #db0a0b
+}
+
+#logo-nin {
+    font-family: 'Archivo Black', sans-serif;
+    position: relative;
+    z-index: 1;
+}
+
+#logo-347 {
+    font-family: 'Mr Dafoe', cursive;
+    position: relative;
+    font-size: 80%;
+    transform: rotate(20deg);
+    color: #db0a0b;
+}
+
+/* navigation */
+
+nav {
+    margin: 20px 10%;
+}
+
+#navigation {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+}
+
+/* hero image  */
+
+#hero-container {
+    width: 100%;
+    height: 600px;
+    position: relative;
+    overflow: hidden;
+}
+
+#hero-project { 
+    width: 100%;
+    height: 600px;
+    background-color: blue;
+}
+
+#hero-call-box {
+    position: absolute;
+    background-color: blanchedalmond;
+    bottom: 10%;
+    right: 10%;
+}
