--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -1,4 +1,6 @@
-* * {
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Archivo+Black&family=Archivo+Narrow:wght@700&family=Caveat:wght@700&family=Comforter&family=Hammersmith+One&family=Homemade+Apple&family=Josefin+Sans:wght@200&family=Jost&family=Kanit:wght@700&family=Lexend+Exa:wght@900&family=Libre+Barcode+39+Text&family=Marcellus&family=Merienda:wght@700&family=Michroma&family=Monda&family=Montserrat+Subrayada:wght@700&family=Mr+Dafoe&family=Orbitron&family=Oxanium:wght@200;800&family=Quantico:wght@700&family=Rock+Salt&family=Russo+One&family=Splash&family=Teko:wght@700&family=Water+Brush&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     border: none;
@@ -7,56 +9,66 @@
 /* header and logo  */
 
 header {
-    width: 100vw
+    width: 100%
 }
 
 #logo-container {
-    margin: 0 auto;
-    width: 325px;
-    background-color: red;
+    margin: 10px auto;
+    width: 230px;
+    height: 115px;
     text-transform: uppercase;
+    position: relative;
+    overflow: hidden;
 }
 
 #logo-r {
     font-family: 'Russo One', sans-serif;
     font-weight: 700;
+    font-size: 72px;
     position: relative;
+    top: 15px;
     z-index: 3;
 }
 
 #logo-o {
     font-family: 'Comforter', cursive;
     font-weight: 500;
-    position: relative;
+    font-size: 108px;
+    position: absolute;
+    left: 19px;
+    top: -20px;
     z-index: 2;
     color: #db0a0b
 }
 
 #logo-nin {
     font-family: 'Archivo Black', sans-serif;
-    position: relative;
+    font-size: 74px;
+    position: absolute;
+    top: 5px;
+    left: 80px; 
     z-index: 1;
 }
 
 #logo-347 {
     font-family: 'Mr Dafoe', cursive;
-    position: relative;
-    font-size: 80%;
-    transform: rotate(20deg);
+    position: absolute;
+    right: 45px;
+    top: 42px;
+    font-size: 57.6px;
     color: #db0a0b;
 }
 
 /* navigation */
 
-nav {
-    margin: 20px 10%;
-}
+nav {margin: 20px 10%;}
+
 
 #navigation {
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
+    justify-content: space-between;
 }
 
 /* hero image  */
@@ -79,4 +91,19 @@ nav {
     background-color: blanchedalmond;
     bottom: 10%;
     right: 10%;
+}
+
+/* about section */
+
+#about-container {
+    margin-top: 5%;
+    width: 100%;
+    height: 600px;
+    position: relative;
+    overflow: hidden;
+}
+
+#about {
+    background-color: blueviolet;
+    height: 600px;
 }
