--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Archivo+Black&family=Archivo+Narrow:wght@700&family=Caveat:wght@700&family=Comforter&family=Hammersmith+One&family=Homemade+Apple&family=Josefin+Sans:wght@200&family=Jost&family=Kanit:wght@700&family=Lexend+Exa:wght@900&family=Libre+Barcode+39+Text&family=Marcellus&family=Merienda:wght@700&family=Michroma&family=Monda&family=Montserrat+Subrayada:wght@700&family=Mr+Dafoe&family=Orbitron&family=Oxanium:wght@200;800&family=Quantico:wght@700&family=Rock+Salt&family=Russo+One&family=Splash&family=Teko:wght@700&family=Water+Brush&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Montserrat&family=Archivo+Black&family=Archivo+Narrow:wght@700&family=Caveat:wght@700&family=Comforter&family=Hammersmith+One&family=Homemade+Apple&family=Josefin+Sans:wght@200&family=Jost&family=Kanit:wght@700&family=Lexend+Exa:wght@900&family=Libre+Barcode+39+Text&family=Marcellus&family=Merienda:wght@700&family=Michroma&family=Monda&family=Montserrat+Subrayada:wght@700&family=Mr+Dafoe&family=Orbitron&family=Oxanium:wght@200;800&family=Quantico:wght@700&family=Rock+Salt&family=Russo+One&family=Splash&family=Teko:wght@700&family=Water+Brush&display=swap');
 
 * {
     margin: 0;
@@ -10,8 +10,13 @@ h1 {
     font-family: 'teko', impact, sans-serif;
 }
 
+h2 {
+    font-family: 'Michroma', sans-serif;
+    letter-spacing: 4px;
+}
+
 body {
-    font-family: 'Michroma', 'roboto', sans-serif;
+    font-family: 'Monsterrat', 'roboto', sans-serif;
 }
 
 /* header and logo  */
@@ -114,7 +119,7 @@ nav {
     border-bottom: 2px solid #db0a0b;
 }
 
-#navigation a:hover + #nav-hover-home {
+#navigation a:hover+#nav-hover-home {
     color: #db0a0b;
 }
 
@@ -157,10 +162,127 @@ nav {
     width: 100%;
     height: 600px;
     position: relative;
+}
+
+#about-image-container {
+    overflow: hidden;
+    width: 50%;
+    height: 600px;
+    float: right;
+}
+
+#about-image {
+    background: url(../images/index/placeholder-about.png) no-repeat center center;
+    width: 100%;
+    height: 600px;
+    position: relative;
+    right: 0;
+    /* animation */
+    animation-name: about-slide;
+    animation-duration: 30s;
+    animation-fill-mode: forwards;
+}
+
+/* about image animation */
+@keyframes about-slide {
+    from {
+        transform: scale(1.1);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+
+#about-text-container {
+    width: 50%;
+}
+
+#about-text {
+    font-size: 1.2em;
+    Margin: auto auto;
+    padding: 0 2% 5% 2%;
+}
+
+/* call to action secton */
+
+#call-to-actions {
+    width: 50%;
+    margin: 5% auto;
+    font-size: 1.2em;
+}
+
+#call-to-actions>h2 {
+    text-align: center;
+    margin-bottom: 0.5em;
+}
+
+/* contact form */
+
+#contact-container {
+    width: 95%;
+    height: 600px;
+    margin: 0 auto;
+    position: relative;
+    padding: 1%;
+    border: 1px solid #747474;
     overflow: hidden;
 }
 
-#about {
-    background-color: blueviolet;
+#contact-bg {
+    background: url(../images/index/placeholder-form.png) no-repeat center;
+    background-size: cover;
+    width: 100%;
     height: 600px;
+}
+
+.contact-form {
+    margin-top: 30px;
+    color: #f8f8f7;
+    background-color: rgba(34, 32, 32, 0.6);
+    position: absolute;
+    left: 10%;
+    max-width: 450px;
+    padding: 30px;
+}
+
+.contact-form > h2 {
+    color: #f8f8f7;
+    padding-bottom: 0.5em;
+}
+
+.form-text {
+    background: transparent;
+    color: #f8f8f7;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #f8f8f7;
+    border-radius: 2px;
+}
+
+.form-text:focus {
+    outline: 2px solid #db0a0b !important;
+    border: 1px solid rgba(0, 0, 0, 0) !important;
+    padding-left: 0.2em;
+}
+
+.form-note {
+    min-width: 300px;
+    min-height: 150px;
+}
+
+.submit-contact {
+    float: right;
+    font-family: 'Michroma', sans-serif;
+    color:#f8f8f7;
+    background-color: rgba(0, 0, 0, 0);
+    border: 1px solid #f8f8f7;
+    padding: 5px;
+    border-radius: 2px;
+}
+
+.submit-contact:hover {
+    background-color: #f8f8f7;
+    color: #070505;
 }
