implement new poject section style with new ink partition blend with nav

--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -22,12 +22,14 @@ body {
 /* header and logo  */
 
 header {
-    width: 100%
+    width: 100%;
+    background-color: black;
 }
 
 #logo-container {
-    margin: 10px auto;
-    color: #070505;
+    margin: 0 auto;
+    padding-top: 15px; 
+    color: #f8f8f7;
     width: 230px;
     height: 115px;
     text-transform: uppercase;
@@ -103,12 +105,22 @@ nav {
     color: #db0a0b;
 }
 
+#ink-partition {
+    width: 100%;
+    height: 200px;
+    background: url(../images/index/ink-partition-4.png) no-repeat center center;
+    position: absolute;
+    top: 100px;
+    z-index: 1;
+}
 /* hero image  */
 
 #hero-container {
     width: 100%;
-    height: 600px;
-    position: relative;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: -1;
     overflow: hidden;
 }
 
@@ -116,6 +128,7 @@ nav {
     overflow: hidden;
     padding-top: 56.25%;
     position: relative;
+    z-index: -1;
 
 }
 
@@ -126,6 +139,15 @@ nav {
     position: absolute;
     top: 0;
     width: 100%;
+    z-index: -1;
+}
+
+#current-project-link {
+    width: 100%;
+    height: 600px;
+    background: none;
+    position: static;
+    z-index: 1;
 }
 
 #hero-call-box {
