--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -89,11 +89,11 @@ nav {
     text-decoration: none;
     padding: 10px;
     color: #f8f8f7;
-    /* text-transform: uppercase; */
-    font-family: 'teko', sans-serif;
+    text-transform: uppercase;
+    font-family: 'Marcellus', serif;
     font-weight: 700;
     font-size: 2rem;
-    letter-spacing: 6px;
+    letter-spacing: 8px;
     position: relative;
     z-index: 3;
     background-color: black;
@@ -148,19 +148,13 @@ nav {
     z-index: 1;
 }
 
-/* navigation animations */
-
-/* @keyframes nav-hover {
-    from {background-color: black;}
-    to {background-color: #f8f8f7;}
- } */
-
 /* hero image  */
 
 #hero-container {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: sticky;
+    position: -webkit-sticky; /* Safari compatibility */
     top: 0;
     z-index: -1;
     overflow: hidden;
@@ -184,13 +178,13 @@ nav {
     z-index: -1;
 }
 
-#current-project-link {
+/* #current-project-link {
     width: 100%;
-    height: 600px;
+    height: 400px;
     background: none;
     position: static;
     z-index: 1;
-}
+} */
 
 #hero-call-box {
     position: absolute;
@@ -413,4 +407,96 @@ nav {
     bottom: 0;
     right: 0;
     margin-right: 5px;
+}
+
+/* Media queries */
+
+/* screens less than 1300px width */
+@media screen and (max-width: 1300px){ 
+    #hero-project {
+        padding-top: 0;
+    }
+    
+    #hero-project video {
+        position: relative;
+        width: 1300px;
+    }
+}
+
+/* screens less than 415px width */
+@media screen and (max-width: 415px){ 
+.navigation {
+    width: 100%;
+    margin: 0 auto;
+}
+
+#navigation-1 {
+    float: none;
+}
+
+#navigation-2 {
+    float: none;
+    position: relative;
+    bottom: 5px;
+}
+
+#ink-partition {
+    top: 275px;
+}
+}
+
+/* media queries for portrait orientation screens */
+
+/* surface pro 7 screens  */
+@media screen and (min-height: 1368px) and (max-width: 912px){ 
+    #hero-project video {
+        position: relative;
+        width: 2432px;
+        left: -810px;
+    }
+}
+
+/* ipad air */
+@media screen and (min-height: 1180px) and (max-width: 820px){ 
+    #hero-project video {
+        position: relative;
+        width: 2097px;
+        left: -699px;
+    }
+}
+
+/* ipad mini */
+@media screen and (min-height: 1024px) and (max-width: 786px){ 
+    #hero-project video {
+        position: relative;
+        width: 1820px;
+        left: -606px;
+    }
+}
+
+/* galaxy a51/71 */
+@media screen and (min-height: 914px) and (max-width: 412px){ 
+    #hero-project video {
+        position: relative;
+        width: 1624px;
+        left: -541px;
+    }
+}
+
+/* galaxy s8+ */
+@media screen and (min-height: 740px) and (max-width: 360px){ 
+    #hero-project video {
+        position: relative;
+        width: 1315px;
+        left: -438px;
+    }
+}
+
+/* galaxy fold */
+@media screen and (min-height: 653px) and (max-width: 280px){ 
+    #hero-project video {
+        position: relative;
+        width: 1310px;
+        left: -386px;
+    }
 }
