--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -139,7 +139,7 @@ nav {
     color: #db0a0b;
 }
 
-#ink-partition {
+.ink-partition {
     width: 100%;
     height: 200px;
     background: url(../images/index/ink-partition-4.png) no-repeat center center;
@@ -178,18 +178,16 @@ nav {
     z-index: -1;
 }
 
-/* #current-project-link {
-    width: 100%;
-    height: 400px;
-    background: none;
-    position: static;
-    z-index: 1;
-} */
+#current-project-link {
+position: absolute;
+top: 90%;
+right: 10%;
+}
 
 #hero-call-box {
     position: absolute;
     background-color: blanchedalmond;
-    bottom: 10%;
+    bottom: -20%;
     right: 10%;
 }
 
@@ -198,27 +196,50 @@ nav {
 #about-container {
     margin-top: 5%;
     width: 100%;
-    height: 600px;
+    height: 500px;
     position: relative;
+    z-index: 4;
+    background-color: #000000;
+}
+
+#ink-partition-about-top {
+    top: -100px;
+    z-index: 3;
+}
+
+#ink-partition-about-bottom {
+    top: 800px;
+    z-index: 3;
 }
 
 #about-image-container {
+    margin: 0 auto;
+    height: 900px;
+    width: 100%;
     overflow: hidden;
-    width: 50%;
-    height: 600px;
-    float: right;
+    position: relative;
 }
 
 #about-image {
-    background: url(../images/index/placeholder-about.png) no-repeat center center;
+    background: url(../images/index/about-bg-2.png) no-repeat center;
     width: 100%;
-    height: 600px;
-    position: relative;
-    right: 0;
+    height: 1000px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
     /* animation */
     animation-name: about-slide;
     animation-duration: 30s;
     animation-fill-mode: forwards;
+}
+
+#about-image-shade {
+    position: relative;
+    width: 100%;
+    height: 900px;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 3;
 }
 
 /* about image animation */
@@ -237,9 +258,15 @@ nav {
 }
 
 #about-text {
-    font-size: 1.2em;
-    Margin: auto auto;
-    padding: 0 2% 5% 2%;
+    position: absolute;
+    top: 100px;
+    color: #f8f8f7;
+    text-shadow: 1px 1px #000000;
+    width: 90%;
+    font-size: 1.25em;
+    Margin: 0 auto;
+    padding: 10px 5% 10px 5%;
+    z-index: 4;
 }
 
 /* call to action secton */
@@ -410,6 +437,55 @@ nav {
 }
 
 /* Media queries */
+
+/* desktop/laptop/big screen devices */
+@media screen and (min-width: 950px){
+    #about-container {
+        background-color: rgba(0, 0, 0, 0);
+    }
+    
+    #ink-partition-about-top {
+        display: none;
+    }
+    
+    #ink-partition-about-bottom {
+        display: none;
+    }
+    
+    #about-image-container {
+        width: 40%;
+        height: 500px;
+        margin: 0 5%;
+        float: right;
+    }
+
+    #about-image-shade {
+       visibility: hidden;
+
+    }
+
+    #about-image {
+        background-size: contain;
+        top: 0;
+        height: 100%;
+    }
+    /* #about-text-container {
+        width: 50%;
+    } */
+    
+    #about-text {
+        position: absolute;
+        top: 100px;
+        color: #f8f8f7;
+        width: 40%;
+        font-size: 1em;
+        Margin: 0 5%;
+        padding: 10px 5% 10px 5%;
+        z-index: 4;
+    }
+    
+}
+
 
 /* screens less than 1300px width */
 @media screen and (max-width: 1300px){ 
